[gd_scene load_steps=14 format=3 uid="uid://bbj4rmybjdbf3"]

[ext_resource type="Script" path="res://scripts/rock.gd" id="1_mexc3"]
[ext_resource type="Texture2D" uid="uid://huo1axotxjem" path="res://assets/misc/rock.png" id="2_53hw8"]
[ext_resource type="Texture2D" uid="uid://dln4vp4mqqblf" path="res://assets/misc/feathers.png" id="3_yly8p"]
[ext_resource type="PackedScene" uid="uid://dbynjo05hyxh" path="res://scenes/entities/crushing_dust.tscn" id="4_m83k1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d3stk"]
atlas = ExtResource("2_53hw8")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0fcw4"]
atlas = ExtResource("2_53hw8")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_20f0n"]
atlas = ExtResource("2_53hw8")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyxid"]
atlas = ExtResource("2_53hw8")
region = Rect2(384, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1aasd"]
atlas = ExtResource("3_yly8p")
region = Rect2(0, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_l5fec"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3stk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0fcw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20f0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyxid")
}],
"loop": true,
"name": &"Giro",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1aasd")
}],
"loop": true,
"name": &"blast",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fo7s0"]
radius = 61.8466

[sub_resource type="Curve" id="Curve_55tn7"]
_data = [Vector2(0.0271318, 1), 0.0, 0.0, 0, 0, Vector2(0.468992, 0.803774), -1.46038, -1.46038, 0, 0, Vector2(0.879845, 0.109434), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_xqkfh"]
_data = [Vector2(0.174157, 1), 0.0, 0.0, 0, 0, Vector2(0.994382, 0.703297), 0.0, 0.0, 0, 0]
point_count = 2

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_mexc3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_l5fec")
animation = &"Giro"
autoplay = "Giro"
frame_progress = 0.321252

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fo7s0")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 1.5
one_shot = true
explosiveness = 0.5
emission_shape = 2
emission_sphere_radius = 0.01
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 120.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_55tn7")
color = Color(0.392157, 0.317647, 0.137255, 1)

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 1.5
one_shot = true
explosiveness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(0, -500)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 120.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_55tn7")
color = Color(0.294118, 0.203922, 0.12549, 1)

[node name="BlastTimer" type="Timer" parent="."]
one_shot = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="CrushingDust" parent="." instance=ExtResource("4_m83k1")]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 3.0
emission_shape = 2
emission_sphere_radius = 75.0
gravity = Vector2(0, 3920)
scale_amount_min = 4.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_xqkfh")
color = Color(0.392157, 0.317647, 0.137255, 1)

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 3.0
emission_shape = 2
emission_sphere_radius = 75.0
gravity = Vector2(0, 3920)
scale_amount_min = 4.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_xqkfh")
color = Color(0.294118, 0.203922, 0.12549, 1)

[node name="FallingTimer" type="Timer" parent="."]
wait_time = 0.7

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="BlastTimer" to="." method="_on_blast_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="FallingTimer" to="." method="_on_falling_timer_timeout"]

[editable path="CrushingDust"]
